<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zoomifi.donatehere.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headerMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="68dp" />

        <Button
            android:id="@+id/syncDonationsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SyncDonations"
            android:background="@drawable/aqua_green_button"
            android:textColor="@color/White"
            android:onClick="syncDonations"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:layout_alignTop="@+id/customerButton"
            android:layout_toStartOf="@+id/customerButton" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/customerButton"
            android:text="Launch Customer Screen"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/white_button"
            android:layout_toLeftOf="@+id/settingsButton"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/white_button"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/Date"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Amount"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FirstName"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LastName"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Email"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PhoneNumber"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/customText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Custom1"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/customText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Custom2"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/customText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Custom3"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/customText4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Custom4"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/department"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/ordersListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/syncDonationsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PressSync"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create New Donation"
            android:onClick="callCreateDonationAsync"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update List"
            android:onClick="callQueryDonationOrders"/>

    </LinearLayout>

</LinearLayout>
