<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="17dp"
        android:minHeight="17dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/progress_bar_top_drawable" />

    <TextView
        android:id="@+id/progressBarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0%"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:layout_marginLeft="15dp"
        android:textStyle="bold|italic"
        android:paddingBottom="3dp"
        android:layout_alignParentTop="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.25"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AMOUNT_TENDER"
                android:textSize="14sp"
                android:textColor="@color/Black"
                android:textStyle="bold"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_search_category_default"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"/>

                <EditText
                    android:id="@+id/searchBar"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="4"
                    android:inputType="text"
                    android:textSize="17sp"
                    android:hint="@string/searchBarHint"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/search_background"
                    android:layout_marginRight="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.55"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DATE_TIME"
                        android:textSize="16sp"
                        android:textColor="@color/Black"
                        android:textStyle="bold"/>

                    <zoomifi.donatehere.TimeYourOrder.ReselectionSpinner
                        android:id="@+id/spinnerDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blank"
                        android:textSize="13sp"
                        android:textColor="@color/Black"
                        android:background="@drawable/clovergreen_spinner_background_holo_light"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TenderFilter"
                android:textSize="14sp"
                android:textColor="@color/Black"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinnerAmountTender"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textSize="13sp"
                android:textColor="@color/Black"
                android:background="@drawable/clovergreen_spinner_background_holo_light"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StatusFilter"
                android:textSize="14sp"
                android:textColor="@color/Black"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textSize="13sp"
                android:textColor="@color/Black"
                android:background="@drawable/clovergreen_spinner_background_holo_light"
                android:layout_marginTop="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/createNewDriverButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openSetUp"
                android:text="Settings"
                android:background="@drawable/white_button"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="8dp"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!--<LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="16sp"
                android:textColor="@color/Black"
                android:textStyle="bold"/>


        </LinearLayout>-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/testTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/Orders"
            android:textSize="15sp"
            android:textColor="@color/CloverGreen"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TIP_AMOUNT"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery Fee"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <ListView
        android:id="@+id/ordersListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
