<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttonView"
    android:layout_below="@+id/text1"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/DonationPageTitle"
        android:textColor="@color/primary_material_dark"
        android:textSize="28sp"
        />

    <TextView
        android:id="@+id/customeDialogBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DonationDepartmentDisclaimer"
        android:textColor="@color/Black"
        android:textSize="14sp"
        android:padding="5dp" />

    <LinearLayout
        android:id="@+id/row1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDepartment"
            android:textSize="22sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:background="@drawable/aqua_green_button"
            android:layout_margin="5dp"
            android:padding="25dp"
            android:minHeight="120dp"
            android:minWidth="270dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDepartment"
            android:textSize="22sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:background="@drawable/aqua_green_button"
            android:layout_margin="5dp"
            android:padding="22dp"
            android:minHeight="120dp"
            android:minWidth="270dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDepartment"
            android:textSize="22sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:background="@drawable/aqua_green_button"
            android:layout_margin="5dp"
            android:padding="22dp"
            android:minHeight="120dp"
            android:minWidth="270dp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDepartment"
            android:textSize="22sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:background="@drawable/aqua_green_button"
            android:layout_margin="5dp"
            android:padding="25dp"
            android:minHeight="120dp"
            android:minWidth="270dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDepartment"
            android:textSize="22sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:background="@drawable/aqua_green_button"
            android:layout_margin="5dp"
            android:padding="25dp"
            android:minHeight="120dp"
            android:minWidth="270dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDepartment"
            android:textSize="22sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:background="@drawable/aqua_green_button"
            android:layout_margin="5dp"
            android:padding="25dp"
            android:minHeight="120dp"
            android:minWidth="270dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxDDisplayDonations"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/SettingsDisplayDonationsScreen"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="25dp"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textColor="@color/White"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/black_button"
            android:padding="10dp"
            android:minWidth="100dp"
            android:onClick="backPress"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

</LinearLayout>
